--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>
         interG
     </h1>
+
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et accusantium atque laudantium provident illo minus maxime mollitia earum amet! Esse nesciunt eaque impedit praesentium magnam amet eos consequatur illo maiores?
+    </p>
 </body>
 </html>
